# teoria-de-algoritmos

./: .gitignore  README.md
tp1/: informe.tex
tp1/mayoritario/: CMakeLists.txt  Instrucciones Algoritmo B  piezas_c.txt
tp1/mayoritario/src/: main.cpp
tp1/mayoritario/src/Lista/: CMakeLists.txt  lista_enteros.cpp  lista_enteros.h  nodo_entero.cpp
tp1/mayoritario/src/ProcesoA/: AlgoritmoA.cpp  AlgoritmoA.h  CMakeLists.txt
tp1/mayoritario/src/ProcesoB/: AlgoritmoB.cpp  AlgoritmoB.h  CMakeLists.txt
tp1/mayoritario/src/ProcesoC/: AlgoritmoC.cpp  AlgoritmoC.h  CMakeLists.txt
tp1/mayoritario/src/SistemaMayoritario/: CMakeLists.txt  SistemaMayoritario.cpp  SistemaMayoritario.h
tp1/mayoritario/src/Utils/: Utils.cpp  Utils.h
tp1/mayoritario/tests/: CMakeLists.txt  MayoritarioProcesoATest.cpp  MayoritarioProcesoBTest.cpp  MayoritarioProcesoCTest.cpp  MayoritarioTest.cpp
tp1/src/Algoritmo_A_tp1_parte2/: AlgoritmoA_main.cpp  Algoritmo_A_tp1_parte2.cbp  Algoritmo_A_tp1_parte2.depend  Algoritmo_A_tp1_parte2.layout  Instrucciones algoritmo A  algoritmo_a_funciones.cpp  algoritmo_a_funciones.h  lista_enteros.cpp  lista_enteros.h  nodo_entero.h
tp1/src/Algoritmo_B_tp1_parte2/: AlgoritmoB  AlgoritmoB_main.cpp  Algoritmo_B_tp1_parte2.cbp  Algoritmo_B_tp1_parte2.depend  Algoritmo_B_tp1_parte2.layout  Algoritmo_b_funciones.cpp  Algoritmo_b_funciones.h  piezas.txt
tp1/src/Algoritmo_C_tp1_parte2/: AlgoritmoC_main.cpp  Algoritmo_C_tp1_parte2.cbp  Algoritmo_C_tp1_parte2.depend  Algoritmo_C_tp1_parte2.layout  Instrucciones algoritmo c.txt  ValgrindOut.xml  algoritmo_c_funciones.cpp  algoritmo_c_funciones.h  lista_enteros.cpp  lista_enteros.h
tp2/MaximaGanancia/: CMakeLists.txt  productos.txt  restricciones.txt
tp2/MaximaGanancia/src/: main.cpp
tp2/MaximaGanancia/src/Producto/: CMakeLists.txt  Producto.cpp  Producto.h
tp2/MaximaGanancia/src/SeleccionadorProductos/: CMakeLists.txt  SeleccionadorProductos.cpp  SeleccionadorProductos.h
tp2/MaximaGanancia/src/SistemaProductos/: CMakeLists.txt  SistemaProductos.cpp  SistemaProductos.h
tp2/MaximaGanancia/src/Utils/: CMakeLists.txt  Utils.cpp  Utils.h
tp2/MaximaGanancia/tests/: CMakeLists.txt  Google_Tests.cbp  MaximaGananciaTest.cpp
tp2/MaximaGanancia/tests/lib/: googletest-distribution.cbp
tp2/MaximaGanancia/tests/lib/googlemock/: gmock.cbp
tp2/MaximaGanancia/tests/lib/googletest/: gtest.cbp
